<resources>
    <string name="app_name">Tumen_Drive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search">Поиск</string>
    <string name="text_expected_rides">Мои поездки</string>
    <string name="text_requests">Заявки</string>
    <string name="text_companion_name">Имя</string>
    <string name="text_add">Добавить</string>
    <string name="text_deny">Отклонить</string>
    <string name="text_ride_distance">В планах проехать:</string>
    <string name="text_location">Локация:</string>
    <string name="text_time">Во сколько:</string>
</resources>