<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/searchCompanion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_search" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/expectedRides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_expected_rides" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/requestsFromCompanions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_requests" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>
</layout>