<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/companionNameTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_companion_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/companionsAmountTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2/3 companions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rideDistanceTextTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/text_ride_distance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/companionNameTV" />

                <TextView
                    android:id="@+id/rideDistanceTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="14.5 km"
                    app:layout_constraintStart_toEndOf="@+id/rideDistanceTextTV"
                    app:layout_constraintTop_toTopOf="@+id/rideDistanceTextTV" />


                <TextView
                    android:id="@+id/locationTextTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/text_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rideDistanceTV" />

                <TextView
                    android:id="@+id/locationTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxWidth="300dp"
                    android:text="Location"
                    app:layout_constraintStart_toEndOf="@+id/locationTextTV"
                    app:layout_constraintTop_toTopOf="@+id/locationTextTV" />

                <TextView
                    android:id="@+id/timeTextTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/text_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationTV" />

                <TextView
                    android:id="@+id/timeTV"
                    style="@style/baseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="18:21"
                    app:layout_constraintStart_toEndOf="@+id/timeTextTV"
                    app:layout_constraintTop_toTopOf="@+id/timeTextTV" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@color/color_green"
            android:text="@string/text_add"
            app:layout_constraintEnd_toStartOf="@+id/Deny"
            app:layout_constraintTop_toTopOf="@+id/Deny" />

        <Button
            android:id="@+id/Deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/color_red"
            android:text="@string/text_deny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <View
            android:id="@+id/dividerItem"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#E60B0B"
            app:layout_constraintTop_toBottomOf="@id/Accept"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>